--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Bem Vindo ao Portal da Qualidade de Software!!!">
+  <script type="text/javascript" src="mobile.js"></script>
   <title>Portal da Qualidade de Software</title>
   <!-- 
     The MIT License (MIT)
