--- a/index-mobile.html
+++ b/index-mobile.html
@@ -84,7 +84,7 @@
           <div data-aos="fade-down" class="linha"></div>
           <p data-aos="fade-up" class="conteudo-principal-escrito-texto">&emsp;&emsp;Bem-vindo ao Portal da Qualidade de Software! Este projeto foi concebido como parte do Trabalho de Conclusão de Curso na Fatec Adib Moisés Dib, no ano de 2023. Nosso objetivo é fornecer um guia abrangente e acessível sobre práticas essenciais para o desenvolvimento de software de alta qualidade.</p>
           <p data-aos="fade-up" class="conteudo-principal-escrito-texto">&emsp;&emsp;Navegue pelos tópicos para descobrir conceitos fundamentais, metodologias e técnicas que formam a base de qualquer projeto de software de excelência. Este portal é dedicado a todos aqueles que buscam aprimorar suas habilidades no campo da engenharia de software e garantir a robustez e confiabilidade de seus produtos.</p>
-          <div data-aos="fade-left" class="linha"></div>
+          <div data-aos="fade-up" class="linha"></div>
         </div>
 
         <!-- MANUAL -->
