--- a/index-mobile.html
+++ b/index-mobile.html
@@ -136,10 +136,8 @@
 
   <footer class="rodape-index-mobile">
     <section class="conteudo-rodape-index-mobile">
-        <a class="conteudo-rodape-paragrafo1-index-mobile">&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;Portal da Qualidade de Software - <strong>2023</strong></a>
-        <!-- <a class="conteudo-rodape-paragrafo2-index-mobile" href="#">Creative Commons - (Imagens)</a> -->
+        <a class="conteudo-rodape-paragrafo1-index-mobile">Portal da Qualidade de Software - <strong>2023</strong></a>
     </section>
-    <!--<img class="rodape-imagem" src="broken-image.svg" alt="Broken Image">-->
   </footer>
   <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
   <script>
