--- a/index-mobile.html
+++ b/index-mobile.html
@@ -95,7 +95,7 @@
         
         <div data-aos="fade-up" class="conteudo-principal-escrito-topico"><p><li># Página Inicial: </li></p></div>
         <div data-aos="fade-up" class="conteudo-principal-escrito-texto-topico"><p>Ao acessar o site, você será direcionado para a página inicial. Esta é a porta de entrada para todas as informações e recursos disponíveis.</p></div>
-        <img data-aos="fade-up" src="imgs/index-mobile/Página Inicial - Home.png" alt="broken" class="video">
+        <img data-aos="fade-up" src="imgs/index-mobile/Página Inicial - Home.PNG" alt="broken" class="video">
         
         <div data-aos="fade-up" class="conteudo-principal-escrito-topico"><p><li># Barra Lateral de Navegação: </li></p></div>
         <div data-aos="fade-up" class="conteudo-principal-escrito-texto-topico"><p>Na lateral esquerda no topo da página, você encontrará a barra de navegação. Esta barra todas as categorias do site.</p></div>
