--- a/manual-mobile.html
+++ b/manual-mobile.html
@@ -124,7 +124,7 @@
 
         <div data-aos="fade-up" class="conteudo-principal-escrito-topico"><p><li># Voltar ao Topo da Página: </li></p></div>
         <div data-aos="fade-up" class="conteudo-principal-escrito-texto-topico"><p>A qualquer momento, você pode retornar ao topo da página clicando no botão com desenho de seta para cima localizado no canto inferior direito da tela.</p></div>
-        <video src="imgs/index-mobile/Tutorial - Botão Retorna ao Topo.mp4" autoplay loop muted data-aos="fade-up" class="video"></video>
+        <img data-aos="fade-up" src="imgs/index-mobile/Tutorial - Botão Retorna ao Topo.gif" alt="broken" class="video">
 
       </div>
     </section>
