--- a/testes-mobile.html
+++ b/testes-mobile.html
@@ -52,9 +52,9 @@
     <a class="subcategoria" href="desenvolvimento-do-codigo.html">Desenvolvimento do Código</a>
     <a class="subcategoria" href="gerenciamento-de-mudanca.html">Gerenciamento de Mudança</a>
     <a class="subcategoria" href="gerenciamento-de-dependencias.html">Gerenciamento de Dependencias</a>
-    <a class="atual" href="seguranca.html">Segurança</a>
+    <a class="subcategoria" href="seguranca.html">Segurança</a>
     <a class="subcategoria" href="performance.html">Performance</a>
-    <a class="subcategoria" href="testes.html">Testes</a>
+    <a class="atual" href="testes.html">Testes</a>
     <a>------------/ /------------</a>
     <a>[ Etapas Finais ]</a>
     <a>----------------------------</a>
