--- a/desenvolvimento-do-codigo-mobile.html
+++ b/desenvolvimento-do-codigo-mobile.html
@@ -43,8 +43,8 @@
         <a>[ Etapas Iniciais ]</a>
         <a>----------------------------</a>
         <a class="subcategoria" href="especificacao-de-requisitos.html">Especificação de Requisitos</a>
-        <a class="subcategoria" href="design-de-software.html">Gerenciamento do Projeto</a>
-        <a class="subcategoria" href="design-de-software.html">Documentação</a>
+        <a class="subcategoria" href="gerenciamento-do-projeto.html">Gerenciamento do Projeto</a>
+        <a class="subcategoria" href="documentacao.html">Documentação</a>
         <a>------------/ /------------</a>
         <a>[ Etapas de Desenvolvimento ]</a>
         <a>----------------------------</a>
