--- a/documentacao-mobile.html
+++ b/documentacao-mobile.html
@@ -44,7 +44,7 @@
         <a>----------------------------</a>
         <a class="subcategoria" href="especificacao-de-requisitos.html">Especificação de Requisitos</a>
         <a class="subcategoria" href="gerenciamento-do-projeto.html">Gerenciamento do Projeto</a>
-        <a class="subcategoria" href="documentacao.html">Documentação</a>
+        <a class="atual" href="documentacao.html">Documentação</a>
         <a>------------/ /------------</a>
         <a>[ Etapas de Desenvolvimento ]</a>
         <a>----------------------------</a>
