--- a/sobre.html
+++ b/sobre.html
@@ -100,11 +100,10 @@
           <div data-aos="fade-up" class="linha"></div>
         </div>
 
-        <div data-aos="fade-left" class="conteudo-principal-extendido-escrito-texto">
-          <!-- FOTO -->
-          <h1 data-aos="fade-left" class="conteudo-principal-escrito-titulo"><li>FOTO: ---</li></h1>
-            <div data-aos="fade-up" class="linha"></div>
-        </div>
+        <a href="imgs/Foto.jpg" target="_blank" align="center">
+          <img data-aos="fade-up" src="imgs/Foto.jpg" alt="broken" class="foto">
+        </a>
+        <div data-aos="fade-up" class="linha"></div>
 
         <div data-aos="fade-left" class="conteudo-principal-extendido-escrito-texto">
           <!-- FEEDBACK -->
