--- a/sobre-mobile.html
+++ b/sobre-mobile.html
@@ -100,10 +100,9 @@
         </div>
         <div data-aos="fade-up" class="linha"></div>
 
-        <div data-aos="fade-up" class="foto">
-          <!-- FOTO -->
-          <h1 data-aos="fade-up" class="conteudo-principal-escrito-subtitulo"><li>FOTO: ---</li></h1>
-        </div>
+        <a href="imgs/Foto.jpg" target="_blank" align="center">
+          <img data-aos="fade-up" src="imgs/Foto.jpg" alt="broken" class="foto">
+        </a>
         <div data-aos="fade-up" class="linha"></div>
 
         <div data-aos="fade-up" class="feedback">
