--- a/sobre-mobile.html
+++ b/sobre-mobile.html
@@ -101,7 +101,7 @@
         <div data-aos="fade-up" class="linha"></div>
 
         <a href="imgs/Foto.jpg" target="_blank" align="center">
-          <img data-aos="fade-up" src="imgs/Foto.jpg" alt="broken" class="foto">
+          <img data-aos="fade-up" src="imgs/Foto.jpg" alt="broken" class="video">
         </a>
         <div data-aos="fade-up" class="linha"></div>
 
