--- a/sobre-mobile.html
+++ b/sobre-mobile.html
@@ -85,8 +85,9 @@
           <!-- NOME DO SITE -->
           <h1 data-aos="fade-down" class="conteudo-principal-escrito-titulo" id="introducao">PORTAL DA QUALIDADE DE <br> SOFTWARE <br>&emsp;</h1>
           <div data-aos="fade-down" class="linha"></div>
-          <p data-aos="fade-up" class="conteudo-principal-escrito-texto">&emsp;&emsp;Bem-vindo ao Portal da Qualidade de Software! Este projeto foi concebido como parte do Trabalho de Conclusão de Curso na Fatec Adib Moisés Dib, no ano de 2023. Nosso objetivo é fornecer um guia abrangente e acessível sobre práticas essenciais para o desenvolvimento de software de alta qualidade.</p>
-          <p data-aos="fade-up" class="conteudo-principal-escrito-texto">&emsp;&emsp;Navegue pelos tópicos para descobrir conceitos fundamentais, metodologias e técnicas que formam a base de qualquer projeto de software de excelência. Este portal é dedicado a todos aqueles que buscam aprimorar suas habilidades no campo da engenharia de software e garantir a robustez e confiabilidade de seus produtos.</p>
+          <p data-aos="fade-up" class="conteudo-principal-escrito-texto">&emsp;&emsp;Bem-vindo à seção 'Sobre' do Portal da Qualidade de Software! Nós somos uma equipe de entusiastas e apaixonados por tecnologia, desenvolvemos este projeto como parte integrante do Trabalho de Conclusão de Curso na Fatec Adib Moisés Dib, no ano de 2023.</p>
+          <p data-aos="fade-up" class="conteudo-principal-escrito-texto">&emsp;&emsp;Nosso compromisso é fornecer um recurso valioso e abrangente para todos os interessados no aprimoramento contínuo da engenharia de software. Através deste portal, buscamos oferecer um guia acessível, repleto de conceitos fundamentais, metodologias e técnicas essenciais para a criação de software de alto desempenho e confiabilidade.</p>
+          <p data-aos="fade-up" class="conteudo-principal-escrito-texto">&emsp;&emsp;Agradecemos por fazer parte desta jornada de aprendizado e crescimento conosco. Juntos, podemos construir um futuro onde a excelência em engenharia de software seja uma norma alcançável para todos.</p>
           <div data-aos="fade-up" class="linha"></div>
         </div>
 
