--- a/desenvolvimento-do-codigo.html
+++ b/desenvolvimento-do-codigo.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Quais são as principais etapas iniciais?">
+  <meta name="description" content="Quais são as principais etapas de desenvolvimento?">
   <script type="text/javascript" src="javascript-mobile/desenvolvimento-do-codigo-mobile.js"></script>
   <title>Portal da Qualidade de Software</title>
   <!-- 
