--- a/sobre-mobile.html
+++ b/sobre-mobile.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="TCC - Qualidade de Software - Fatec Adib Moisés Dib. 2023">
+  <meta name="description" content="Sobre Nós">
   <script type="text/javascript" src="javascript-pc/sobre-pc.js"></script>
   <title>Trabalho de Conclusão de Curso - Fatec 2023</title>
   <!-- 
